--- a/TradeSaber/Shared/MainLayout.razor
+++ b/TradeSaber/Shared/MainLayout.razor
@@ -1,5 +1,15 @@
 ﻿@inherits LayoutComponentBase
+@using MudBlazor;
 
-<div>
-    @Body
-</div>
+<MudThemeProvider />
+
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudText Typo="Typo.h5" Class="ml-3">Application</MudText>
+        <MudAppBarSpacer />
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+    </MudAppBar>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
