--- a/TradeSaber/_Imports.razor
+++ b/TradeSaber/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using TradeSaber
+@using TradeSaber.Interfaces;
 @using TradeSaber.Shared
+@using MudBlazor;
