--- a/TradeSaber/_Imports.razor
+++ b/TradeSaber/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -12,3 +14,5 @@
 @using MudBlazor;
 @using TradeSaberSharp;
 @using TradeSaberSharp.Models;
+@using System.Reactive;
+@using System.Reactive.Subjects;
