--- a/TradeSaber/App.razor
+++ b/TradeSaber/App.razor
@@ -8,7 +8,7 @@
             </AuthorizeRouteView>
         </Found>
         <NotFound>
-            <LayoutView>
+            <LayoutView Layout="@typeof(MainLayout)">
                 <p>Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
