--- a/TradeSaber/Pages/Admin.razor
+++ b/TradeSaber/Pages/Admin.razor
@@ -10,7 +10,7 @@
     <MudCardActions>
         <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/rarities"))">Rarities</MudButton>
         <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/series"))">Series</MudButton>
-        <MudButton Class="ma-1" Variant="Variant.Filled">Cards</MudButton>
+        <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/cards"))">Cards</MudButton>
         <MudButton Class="ma-1" Variant="Variant.Filled">Packs</MudButton>
     </MudCardActions>
 </MudCard>
