--- a/TradeSaber/Pages/AdminPage/RaritiesPage.razor
+++ b/TradeSaber/Pages/AdminPage/RaritiesPage.razor
@@ -4,56 +4,63 @@
 @inject TradeSaberClient tradeSaberClient
 @inject ILocalUserService localUserService
 
-<MudCard Class="ma-1">
-    <MudCardContent>
-        <MudText Typo="Typo.h4">Create</MudText>
-        <MudForm @ref="form" @bind-IsValid="@success">
-            <MudGrid>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudTextField @bind-Value="rarityName" T="string" Label="Name" Required="true" RequiredError="Rarity name is required!" Validation="@(new Func<string, IEnumerable<string>>(ValidateRarityName))" Immediate="true" />
-                </MudItem>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudNumericField @bind-Value="probability" T="float" Label="Probability" Adornment="Adornment.End" AdornmentText="%" Min="0" Max="100" Immediate="true" />
-                </MudItem>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudTextField @bind-Value="color" T="string" Label="Color" Required="true" Adornment="Adornment.Start" AdornmentText="#" RequiredError="Color is required!" Immediate="true" />
-                </MudItem>
-                <MudItem xs="12" sm="12" md="12" Class="pa-4">
-                    <MudButton Variant="Variant.Filled" Color="Color.Warning" OnClick="ResetForm">Reset</MudButton>
-                    <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="Upload" Disabled="@(!success)">Submit</MudButton>
-                </MudItem>
-            </MudGrid>
-        </MudForm>
-    </MudCardContent>
-</MudCard>
-<MudCard Class="ma-1">
-    <MudCardContent>
-        <MudText Typo="Typo.h4">Edit</MudText>
-        <MudForm @ref="form" @bind-IsValid="@editSuccess">
-            <MudGrid>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudAutocomplete @bind-Value="EditRarity" T="Rarity" Label="Rarity" Required="true" RequiredError="Rarity is required" Validation="@(new Func<string, IEnumerable<string>>(ValidateRarityName))" ResetValueOnEmptyText="true" SearchFunc="@FilterRarities" Immediate="true" ToStringFunc="@(r => r?.Name)" />
-                </MudItem>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudNumericField @bind-Value="editProbability" T="float" Label="Probability" Adornment="Adornment.End" AdornmentText="%" Min="0" Max="100" Immediate="true" />
-                </MudItem>
-                <MudItem xs="12" sm="6" md="4">
-                    <MudTextField @bind-Value="editColor" T="string" Label="Color" Required="true" Adornment="Adornment.Start" AdornmentText="#" RequiredError="Color is required!" Immediate="true" />
-                </MudItem>
-                <MudItem xs="12" sm="12" md="12" Class="pa-4">
-                    <MudButton Variant="Variant.Filled" Color="Color.Warning" OnClick="ResetEdit">Reset</MudButton>
-                    <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="Edit" Disabled="@(!editSuccess)">Submit</MudButton>
-                </MudItem>
-            </MudGrid>
-        </MudForm>
-    </MudCardContent>
-</MudCard>
+@attribute [Authorize(Scopes.UploadFile)]
+
+<AuthorizeView Policy="@Scopes.CreateRarity">
+    <MudCard Class="ma-1">
+        <MudCardContent>
+            <MudText Typo="Typo.h4">Create</MudText>
+            <MudForm @ref="form" @bind-IsValid="@success">
+                <MudGrid>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudTextField @bind-Value="rarityName" T="string" Label="Name" Required="true" RequiredError="Rarity name is required!" Validation="@(new Func<string, IEnumerable<string>>(ValidateRarityName))" Immediate="true" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudNumericField @bind-Value="probability" T="float" Label="Probability" Adornment="Adornment.End" AdornmentText="%" Min="0" Max="100" Immediate="true" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudTextField @bind-Value="color" T="string" Label="Color" Required="true" Adornment="Adornment.Start" AdornmentText="#" RequiredError="Color is required!" Immediate="true" />
+                    </MudItem>
+                    <MudItem xs="12" sm="12" md="12" Class="pa-4">
+                        <MudButton Variant="Variant.Filled" Color="Color.Warning" OnClick="ResetForm">Reset</MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="Upload" Disabled="@(!success)">Submit</MudButton>
+                    </MudItem>
+                </MudGrid>
+            </MudForm>
+        </MudCardContent>
+    </MudCard>
+</AuthorizeView>
+<AuthorizeView Policy="@Scopes.ManageRarity">
+    <MudCard Class="ma-1">
+        <MudCardContent>
+            <MudText Typo="Typo.h4">Edit</MudText>
+            <MudForm @ref="editForm" @bind-IsValid="@editSuccess">
+                <MudGrid>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudAutocomplete @bind-Value="EditRarity" T="Rarity" Label="Rarity" Required="true" RequiredError="Rarity is required" Validation="@(new Func<string, IEnumerable<string>>(ValidateRarityName))" ResetValueOnEmptyText="true" SearchFunc="@FilterRarities" Immediate="true" ToStringFunc="@(r => r?.Name)" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudNumericField @bind-Value="editProbability" T="float" Label="Probability" Adornment="Adornment.End" AdornmentText="%" Min="0" Max="100" Immediate="true" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudTextField @bind-Value="editColor" T="string" Label="Color" Required="true" Adornment="Adornment.Start" AdornmentText="#" RequiredError="Color is required!" Immediate="true" />
+                    </MudItem>
+                    <MudItem xs="12" sm="12" md="12" Class="pa-4">
+                        <MudButton Variant="Variant.Filled" Color="Color.Warning" OnClick="ResetEdit">Reset</MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="Edit" Disabled="@(!editSuccess)">Submit</MudButton>
+                    </MudItem>
+                </MudGrid>
+            </MudForm>
+        </MudCardContent>
+    </MudCard>
+</AuthorizeView>
 
 @code {
 
     private bool success;
     private bool editSuccess;
     private MudForm form = null!;
+    private MudForm editForm = null!;
 
     private float probability;
     private string color = string.Empty;
@@ -96,7 +103,6 @@
         if (string.IsNullOrEmpty(input))
             return Task.FromResult(CurrentRarities ?? Array.Empty<Rarity>());
         return Task.FromResult(CurrentRarities?.Where(cr => cr.Name.Contains(input, StringComparison.InvariantCultureIgnoreCase)) ?? Array.Empty<Rarity>());
-
     }
 
     private async Task Upload()
@@ -126,7 +132,7 @@
     private void ResetEdit()
     {
         EditRarity = null;
-        form.Reset();
+        editForm.Reset();
     }
 
     private async Task Edit()
