Added packs page

--- a/TradeSaber/Pages/Admin.razor
+++ b/TradeSaber/Pages/Admin.razor
@@ -11,7 +11,7 @@
         <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/rarities"))">Rarities</MudButton>
         <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/series"))">Series</MudButton>
         <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/cards"))">Cards</MudButton>
-        <MudButton Class="ma-1" Variant="Variant.Filled">Packs</MudButton>
+        <MudButton Class="ma-1" Variant="Variant.Filled" OnClick="@(() => navigationManager.NavigateTo("/admin/packs"))">Packs</MudButton>
     </MudCardActions>
 </MudCard>
 
